* Change invoice so it shows any other accounts that have percentages in the request.
* Completed implementation of split by amount.
* Changed Analysis Files set up, allowing sorting and organizing analysis files into folders.  
* Changed Experiement File organizing so that folders are displayed properly and files are more easily moved.  

5.3.5.1(12/21/2011)
--------------------
* Added text box to the user detail view that allows for entry of UCSC URL.
* When user selects organism when registering an experiment the organism selection will now propagate to the hyb setup tab.
* Tool tips will now display when the user mouses over the Sample Annotations.  Tool tips will display the description associated with the sample annotation.
* Added two check boxes to the Sample Annotation configuration screen that details whether the annotation is for Sample or for Data Track.
* Fixed bug that would cause an overwrite of a current experiment code application by the last saved experiment's code application.  Occurred in ExperimentEditView.
* Added new fields to the Organisms Window (binomial name, sort order, ncbi tax id, build date, das2name)

5.3.5
--------------------
* Added call to setDirty when annotation owner changed
* Changed Annotation security so lab managers can update if no owner
* Converted PendingWorkAuthd query to HQL
* When user self-registers, default user to isActive='Y'

5.3.4.2 (12/14/2011)
--------------------
* Removed 'Downloads' link, fixed files refresh when selecting a new experiment, reset tab index to 0 when switching to a new experiment or from 'edit' to 'view' or vice-versa.
* Added check to insure that "description" cannot be used as the name for an annotation
* Added "Copy Column" feature to sample view
* Minor correction to GetAppUserPublic to add " Lab" to the labName string
* Fixed problem with not being able to log in after changing password
* Fixed user self register email problem when property for work auth admin had multiple emails.